syntax = "proto3";
package relay;

service Relay {
    rpc ReadData (RelayRequest) returns (RelayResponse);
}

message RelayRequest {
    string dummy_request = 1;
}

message RelayResponse {
    bool successful = 1;
}


